feat: adicionado metodos de filtrar filmes, buscar por id, atualizar e deletar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=${DB_PASSWORD:postgres}
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+aws.region=us-east-1
+aws.accessKeyId=${AWS_ACCESS_KEY}
+aws.secretKey=${AWS_SECRET_KEY}
+aws.bucket.name=${AWS_BUCKET_NAME:cinema-app-images}
