feat: adicionado biblioteca do jwt e adicionando o campo name na tabela customers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ aws.region=us-east-1
 aws.accessKeyId=${AWS_ACCESS_KEY}
 aws.secretKey=${AWS_SECRET_KEY}
 aws.bucket.name=${AWS_BUCKET_NAME:cinema-app-images}
+
+api.security.token.secret=${JWT_SECRET}
