--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ aws.secretKey=${AWS_SECRET_KEY}
 aws.bucket.name=${AWS_BUCKET_NAME:cinema-app-images}
 
 api.security.token.secret=${JWT_SECRET}
+
+stripe.secret.key= ${STRIPE_SECRET_KEY}
+
+
