--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,11 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=*
 
-management.endpoints.web.exposure.include = health,metrics
+management.endpoints.web.exposure.include = health,metrics,prometheus
 management.endpoints.enabled-by-default=false
 management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
 
 
