--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,10 +48,19 @@ services:
     ports:
       - 9090:9090
 
+  grafana:
+    container_name: grafana
+    image: grafana/grafana:latest
+    ports:
+      - 3000:3000
+    networks:
+      cinema-app-network:
+
 volumes:
   pgdata:
   pgadmin_data:
   prometheus_data:
+  grafana_data:
 
 networks:
   cinema-app-network:
