--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,3 +40,10 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=eduardo-araujo1_cinema-app
+
+      - name: Build Docker Image
+        run: |
+          docker build -t cinema-app:${{ github.sha | slice(0, 7) }} .
+
+      - name: Trivy Scan
+        run: docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy:latest image cinema-app:${{ github.sha | slice(0, 7) }}
